Fix news post image bug
- Fix bug in which images are clipped in news posts (properly this time)

--- a/src/assets/style/_base.scss
+++ b/src/assets/style/_base.scss
@@ -67,6 +67,10 @@ p {
     margin: .5em 0;
 }
 
+img {
+    max-width: 100%;
+}
+
 blockquote {
     display: inline-block;
     margin: 0 .25em;
